# homeyease

./: .env.example  .gitignore  .replit  README.md  TEST_FLOW.md  main.py  pyproject.toml  replit.md  test_endpoints.py  test_twilio_integration.py
app/: __init__.py
app/api/: __init__.py  twilio_webhook.py  webhook.py
app/config/: __init__.py  database.py  settings.py  supabase.py
app/models/: __init__.py  database.py  meal.py  meal_plan.py  session.py  user.py  user_pantry.py
app/services/: __init__.py  hybrid_message_handler.py  image_service.py  intent_classifier.py  meal_service.py  message_handler.py  onboarding_service.py  recommendation_service.py  twilio_client.py  twilio_message_adapter.py  twilio_message_handler.py  user_service.py  whatsapp_client.py
app/tests/: conftest.py  e2e_tests.py  test_app_flow.py  test_endpoints.py  test_image_service.py  test_intent_classifier.py  test_onboarding_flow.py  test_recommendation_service.py  test_twilio_client.py  (+3 more)
attached_assets/: Pasted--workspace-python-test-endpoints-py-Starting-Mambo-Bot-Test-Suite-Testing-against-http-12-1758230742419_1758230742420.txt  Pasted-Architecture-Data-flow-simplified-User-WhatsApp-message-Webhook-hits-api-Parse-message--1758145571205_1758145571206.txt  Pasted-Nice-let-s-finish-the-onboarding-set-Below-are-copy-pasteable-WhatsApp-Cloud-API-payloads-an-1758145722008_1758145722008.txt  Pasted-Nice-let-s-ship-these-exact-copy-pasteable-WhatsApp-Cloud-API-interactive-list-payloads-for-Q-1758145707973_1758145707974.txt
server/: routes.ts  storage.ts
shared/: schema.ts
(+10 files in other folders)
