[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "dateparser>=1.2.0",
    "fastapi>=0.104.0",
    "google-cloud-vision>=3.4.0",
    "numpy>=1.24.0",
    "openai>=1.107.3",
    "opencv-python>=4.8.0",
    "pdf2image>=1.16.0",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "supabase>=2.0.0",
    "tenacity>=8.0.0",
    "twilio>=9.8.0",
    "uvicorn[standard]>=0.24.0",
]
